# claude-agentic-framework

./: .gitignore  ADMIN.md  CLAUDE.md  FRAMEWORK_REFERENCE.md  MIGRATION-CRYPTO-TO-STRATEGIC-AGENTS.md  PROJECT-ARCHITECT-ANALYSIS-SUMMARY.md  QUICKSTART.md  README.md  STRATEGIC-AGENTS-QUICK-REF.md  VAULTMIND-AGENT-ECOSYSTEM.md  WORKTREE_TEST_FILE.md  install.sh  justfile  pyproject.toml  test_review_complexity.py  test_review_duplication.py  uninstall.sh
.claude/: ARCHITECTURE.md  FACTS.md  MEMORY.md
archive/: README.md
caf-hooks/: Cargo.toml
caf-hooks/.claude/: FACTS.md  MEMORY.md
caf-hooks/bench/: run_benchmarks.sh
caf-hooks/src/: circuit_breaker.rs  io.rs  main.rs  state.rs  types.rs
caf-hooks/src/hooks/: audit_config_change.rs  auto_error_analyzer.rs  auto_escalate.rs  auto_fact_extractor.rs  auto_memory_writer.rs  auto_refine.rs  context_bundle_logger.rs  damage_control.rs  doctor.rs  enforce_orchestrate.rs  epistemic_guard.rs  file_watcher.rs  mod.rs  orch_depth_tracker.rs  orchestrator_tool_guard.rs  post_compact_verify.rs  session_cost_tracker.rs  stop_failure_recovery.rs  subagent_tracker.rs  task_quality_gate.rs  voice_done.rs
data/: budget_config.yaml  caddy_config.yaml  deleted_entities.txt  mempalace.yaml  model_tiers.yaml
docs/: 2026_UPGRADE_GUIDE.md  KNOWLEDGE_DB_VERIFICATION.md  MEMORY_ARCHITECTURE.md  RLM_AUTO_TRIGGERING.md  ROLES_AND_RESPONSIBILITIES.md  SECURITY_BEST_PRACTICES.md  SKILLS_INTEGRITY.md  WORKTREE_TEST.md  agents.html  caddy.html  caf-guide.html  caf-hooks-benchmark.md  framework-guide-ko.html  framework-report.html  (+6 more)
(+579 files in other folders)
