[package]
name = "caf-hooks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
fs2 = "0.4"
dirs = "5"
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
